--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link href="list.php" />
   </head>
   <body>
     <h1>Grāmatu vērtēšana</h1>
 
-    <form action="">
+    <form action="submit.php">
       <label for="fname">Vārds: </label>
       <input type="text" id="fname" name="fname" /><br /><br />
       <label for="lname">Uzvārds: </label>
@@ -29,5 +30,9 @@
 
       <input type="submit" value="Submit" />
     </form>
+
+    <a href="list.php">List</a>
+
+    <a href="submit.php">Submit</a>
   </body>
 </html>
