--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Grāmatu vērtēšana</h1>
 
-    <form action="submit.php">
+    <form action="submit.php" method="POST">
       <label for="fname">Vārds: </label>
       <input type="text" id="fname" name="fname" /><br /><br />
       <label for="lname">Uzvārds: </label>
@@ -20,12 +20,12 @@
       <label for="description">Apraksts: </label>
       <input type="text" id="description" name="description" /><br /><br />
       <label for="level">Izvēlies līmeni:</label>
-      <select name="level" id="level">
-        <option value="nelasams">Nelasāma</option>
-        <option value="slikts">Slikta</option>
-        <option value="viduvejs">Viduvēja</option>
-        <option value="labs">Laba</option>
-        <option value="lielisks">Lieliska</option>
+      <select name="rating" id="level">
+        <option value="1">Nelasams</option>
+        <option value="2">Slikta</option>
+        <option value="3">Viduvēja</option>
+        <option value="4">Laba</option>
+        <option value="5">Lieliska</option>
       </select>
 
       <input type="submit" value="Submit" />
